<resources>
    <string name="app_name">MyHome</string>
    <string name="label_titleSearch">Buscar Propiedad</string>
    <string name="action_money">Moneda</string>
    <string name="action_language">Idioma</string>
    <string name="action_search">Buscar</string>
    <string name="label_sale">Venta</string>
    <string name="label_rental">Alquiler</string>
    <string name="label_rental1">Anticretico</string>
    <string name="label_priceMin">Precio Min</string>
    <string name="label_priceMax">Precio Max</string>
    <string name="label_typeHouse">Tipo Inmueble</string>
    <string name="label_city">Ciudad</string>
    <string name="label_showMap">Mostrar en Mapa</string>
    <string name="label_showList">Mostrar en Lista</string>
    <string name="hint_priceMin">0</string>
    <string name="hint_priceMax">16.000</string>
    <string name="title_activity_publish_house">Publicar Propiedad</string>
    <string name="label_titlePublishHouse">Publicar Propiedad</string>
    <string name="label_zone">Zona</string>
    <string name="label_typeRental">Tipo Arrendamiento</string>
    <string name="label_address">Dirección</string>
    <string name="label_price">Precio</string>
    <string name="label_landArea">Superficie Terreno</string>
    <string name="label_buildArea">Superficie Construida</string>
    <string name="label_descripcion">Descripción</string>
    <string name="label_uploadImages">Subir fotos</string>
    <string name="label_location">Ubicación</string>
    <string name="action_settings">Settings</string>
    <string name="btn_register">Registrar</string>
    <string name="title_activity_result_search_list">Resultado</string>
    <string name="hello_world">Hello world!</string>
</resources>
